samples/_failures_safe/1761648448_b4334b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4995a6d5.c: In function ‘main’:
./samples/SAFE/__tmp_4995a6d5.c:158:5: error: expected ‘,’ or ‘;’ at end of input
  158 |     int operation_count = sizeof(operations)
      |     ^~~
./samples/SAFE/__tmp_4995a6d5.c:158:5: error: expected declaration or statement at end of input
